spring-boot-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-sentiment-deployment
  labels:
    app: spring-boot-sentiment
spec:
  replicas: 2
  minReadySeconds: 5  # Минимальное время готовности перед тем как Pod считается готовым
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1  # Максимум на 2 пода больше желаемого количества
      maxUnavailable: 0  # Не допускать недоступности во время обновления
  selector:
    matchLabels:
      app: spring-boot-sentiment
  template:
    metadata:
      labels:
        app: spring-boot-sentiment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/scheme: "http"
    spec:
      containers:
        - name: spring-boot-app
#          image: localhost:5000/mephi-ai:1.0.5
#          image: localhost:5000/mephi-onnx:ubi10-micro-repack.1
#          image: localhost:5000/mephi-tribuo:1.0.1-bin
          image: localhost:5000/mephi-tribuo:1.0.1-jlink
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30      # Количество попыток
            periodSeconds: 10         # Интервал между попытками
            # initialDelaySeconds: 0  # Можно не указывать, по умолчанию 0
            # Общее максимальное время: 30 * 10 = 300 секунд (5 минут)
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 0    # Начинаем проверять сразу после startup
            periodSeconds: 5          # Быстрая проверка когда приложение запустилось
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m" # <- маленькое значение для тестирования нагрузки
            limits:
              memory: "512Mi"
              cpu: "50m" # <- маленькое значение для тестирования нагрузки
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-sentiment-service
  labels:
    app: spring-boot-sentiment
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "5"
spec:
  selector:
    app: spring-boot-sentiment
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: LoadBalancer
#  sessionAffinity: ClientIP  # Стабильная маршрутизация от одного клиента
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-sentiment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"  # Распределение по URI
#    nginx.ingress.kubernetes.io/service-upstream: "true"  # Использовать Service вместо прямых Pod IP
spec:
  ingressClassName: nginx
  rules:
    #- host: minikube-ingress.local
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-sentiment-service
                port:
                  number: 8080
